criação do about

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <nav class="menu">
           <ul>
             <li><a href="https://www.fiap.com.br" target="_blank">FIAP</a></li>
-            <li><a href="#">GOOGL</a></li>
+            <li><a href="#">GOOGLE</a></li>
             <li><a href="#">Github</a></li>
           </ul>
         </nav>
