--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <ul>
             <li><a href="https://www.fiap.com.br" target="_blank">FIAP</a></li>
             <li><a href="https://www.google.com/" target="_blank">GOOGLE</a></li>
-            <li><a href="#">Github</a></li>
+            <li><a href="https://github.com/" target="_blank">Github</a></li>
           </ul>
         </nav>
       </footer>
