--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="container">
       <header id="cabecalho">
-        <h1 class="title">Minha Página</h1>
+        <h1 class="titulo">Minha Página</h1>
         <nav id="menu">
           <!-- ul = unordered list e só pode conter dentro diretamente dentro de si  li (list item) ou outros uls-->
           <ul>
