--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Página Básica</title>
 
     <link rel="stylesheet" href="./css/estilo.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/estilo.css" />
   </head>
 
   <body>
